plugins {
    id 'java'
    id 'groovy'
    id 'maven-publish'
}

group 'pl.edu.pw.ddm.platform.testing'
version '0.0.1-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_1_8

repositories {
    mavenLocal()
    mavenCentral()
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}

dependencies {
    compileOnly 'pl.edu.pw.ddm.platform:model-interface:0.0.1-SNAPSHOT'

    implementation 'org.apache.commons:commons-lang3:3.10'

    compileOnly 'org.projectlombok:lombok:1.18.12'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'

    testImplementation 'pl.edu.pw.ddm.platform:model-interface:0.0.1-SNAPSHOT'
    testImplementation 'pl.edu.pw.ddm.platform.algorithm.clustering.aoptkm:aoptkm:1.0-SNAPSHOT:all'
    testImplementation 'pl.edu.pw.ddm.platform:metrics:0.0.1-SNAPSHOT'

    testImplementation platform('org.spockframework:spock-bom:2.0-M1-groovy-2.5')
    testImplementation 'org.spockframework:spock-core'
    testRuntime 'net.bytebuddy:byte-buddy:1.9.3'
}

test {
    useJUnitPlatform()

    testLogging {
        showStandardStreams = true
    }
}
